2002-12-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/event.test (_keypress, _text_ind_to_x_y):
	Force focus to widget in _keypress method to
	avoid problems with window managers that
	use focus follows mouse. [Bug 526209]

2002-12-01  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/wm.test: Add wm-transient-6.3 to
	check that a transient remains withdrawn
	when it is first withdrawn and then turned
	into a transient.
	* unix/tkUnixWm.c:
	* win/tkWinWm.c: Replace WM_TRANSIENT_WITHDRAWN
	with WM_WITHDRAWN and set this flag whenever
	a window is explicitly withdrawn. This fixes
	the test case added above. [Bug 644356]

2002-11-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/textDisp.test:
	* generic/tkTextDisp.c (TkTextSeeCmd): handle see for unmapped
	text displays. [Bug #641778]

2002-11-19  Jim Ingham <jingham@apple.com>

	* macosx/tkMacOSXScrlbr.c (TkpDisplayScrollbar): If the
	scrollbar width is set to 12 or less (but 12 is what you 
	should use) use the small metric scrollbar.

	(UpdateControlValues): Fix thinko in setting off AUTO_ADJUST for
	the place geometry manager.
	
2002-11-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/Makefile.in: add macosx/*.tcl (buildTkConfig.tcl in
	particular) to the dist target.

2002-11-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/tkWindow.c (Tk_DestroyWindow,
	DeleteWindowsExitProc): Add TkHalfdeadWindow
	type and halfdeadWindowList to keep track
	of windows that were only partially deallocated
	before a call to exit. Finnish cleaning up
	these windows in DeleteWindowsExitProc.
	Keep track of cleanup status in Tk_DestroyWindow
	so that a window with a Destroy binding which
	calls exit will get fully destroyed.
	* tests/window.test: Add Tk_DestroyWindow tests
	for an assortment of half dead window cases.
	[Bug 630533]

2002-11-10  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: fixed erroneous
	removal of libtkstub before Wish was built.
